# coedit

./: CMakeLists.txt  README.md  memo.txt
src/: CMakeLists.txt  coedit_exception.hpp  main.cpp  main_client.cpp  main_server.cpp  main_simple.cpp
src/core/: basic_character_buffer.hpp  basic_character_buffer_cache.hpp  basic_characters_buffer.hpp  basic_characters_buffer_cache.hpp  basic_characters_buffer_ids_buffer.hpp  basic_characters_buffer_ids_buffer_cache.hpp  basic_file_editor.hpp  basic_id_buffer.hpp  basic_id_buffer_cache.hpp  basic_ids_buffer.hpp  basic_ids_buffer_cache.hpp  basic_line.hpp  basic_line_cache.hpp  basic_lines_cache.hpp  cbid_cache.hpp  core_exception.hpp  cursor.hpp  cursor_position.hpp  file_editor_command.hpp  fundamental_types.hpp  line_flags.hpp  newline_format.hpp
src/system/: client.cpp  client.hpp  client_data.cpp  client_data.hpp  server.cpp  server.hpp  server_session.cpp  server_session.hpp  simple.cpp  simple.hpp  system_exception.hpp  tcp_segment.hpp
src/tui/: curses_colors.hpp  curses_interface.cpp  curses_interface.hpp
test/: CMakeLists.txt
test/core_test/: basic_character_buffer_test.cpp  basic_characters_buffer_test.cpp  basic_file_editor_test.cpp  basic_line_test.cpp
